RESOLVED FIXED116734
[CSS Shapes] Fix style issues in BasicShapes
https://bugs.webkit.org/show_bug.cgi?id=116734
Summary [CSS Shapes] Fix style issues in BasicShapes
Bem Jones-Bey
Reported 2013-05-24 12:16:18 PDT
The following BasicShape files have a number of style issues that make it hard to edit the files and keep them consistent. I would like to fix them. Source/WebCore/rendering/style/BasicShapes.cpp: indentation is wrong for some of the lines, they're lined up with method/function calls, which causes the number of spaces to not be a multiple of 4 on those lines. Source/WebCore/css/CSSBasicShapes.h: the enum members are NAMED_LIKE_THIS but the style guide says they should be NamedLikeThis. Source/WebCore/rendering/style/BasicShapes.h: the enum members are NAMED_LIKE_THIS but the style guide says they should be NamedLikeThis.
Attachments
Patch (24.31 KB, patch)
2013-05-29 10:48 PDT, Bem Jones-Bey
no flags
Bem Jones-Bey
Comment 1 2013-05-29 10:48:02 PDT
Created attachment 203216 [details] Patch Fix style issues.
Alexandru Chiculita
Comment 2 2013-05-29 11:08:08 PDT
Comment on attachment 203216 [details] Patch r=me
WebKit Commit Bot
Comment 3 2013-05-29 11:49:33 PDT
Comment on attachment 203216 [details] Patch Clearing flags on attachment: 203216 Committed r150917: <http://trac.webkit.org/changeset/150917>
WebKit Commit Bot
Comment 4 2013-05-29 11:49:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.