[CSS Shapes] Fix style issues in BasicShapes https://bugs.webkit.org/show_bug.cgi?id=116734

Patch by Bem Jones-Bey <bjonesbe@adobe.com> on 2013-05-29
Reviewed by Alexandru Chiculita.

Fix indentation in BasicShapes.cpp, and change enums to respect the
style rules CamelCase instead of HAVING_UNDERSCORES.

No new tests, only style changes.

* css/BasicShapeFunctions.cpp:
(WebCore::valueForBasicShape):
(WebCore::basicShapeForValue):
* css/CSSBasicShapes.cpp:
(WebCore::buildRectangleString):
(WebCore::CSSBasicShapeRectangle::equals):
(WebCore::CSSBasicShapeCircle::equals):
(WebCore::CSSBasicShapeEllipse::equals):
(WebCore::CSSBasicShapePolygon::equals):
(WebCore::CSSBasicShapeInsetRectangle::equals):
* css/CSSBasicShapes.h:
(WebCore::CSSBasicShapeRectangle::type):
(WebCore::CSSBasicShapeInsetRectangle::type):
(WebCore::CSSBasicShapeCircle::type):
(WebCore::CSSBasicShapeEllipse::type):
(WebCore::CSSBasicShapePolygon::type):
* rendering/ExclusionShape.cpp:
(WebCore::ExclusionShape::createExclusionShape):
* rendering/ExclusionShapeInsideInfo.cpp:
(WebCore::ExclusionShapeInsideInfo::isEnabledFor):
* rendering/ExclusionShapeOutsideInfo.cpp:
(WebCore::ExclusionShapeOutsideInfo::isEnabledFor):
* rendering/style/BasicShapes.cpp:
(WebCore::BasicShape::canBlend):
(WebCore::BasicShapeRectangle::path):
(WebCore::BasicShapeCircle::path):
(WebCore::BasicShapeEllipse::path):
(WebCore::BasicShapeInsetRectangle::path):
* rendering/style/BasicShapes.h:
(WebCore::BasicShapeRectangle::type):
(WebCore::BasicShapeCircle::type):
(WebCore::BasicShapeEllipse::type):
(WebCore::BasicShapePolygon::type):
(WebCore::BasicShapeInsetRectangle::type):

Canonical link: https://commits.webkit.org/135252@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150917 268f45cc-cd09-0410-ab3c-d52691b4dbfc