Source/WebCore/css/CSSBasicShapes.h
@@ -41,11 +41,11 @@ namespace WebCore {
 class CSSBasicShape : public RefCounted<CSSBasicShape> {
 public:
     enum Type {
-        CSS_BASIC_SHAPE_RECTANGLE = 1,
-        CSS_BASIC_SHAPE_CIRCLE = 2,
-        CSS_BASIC_SHAPE_ELLIPSE = 3,
-        CSS_BASIC_SHAPE_POLYGON = 4,
-        CSS_BASIC_SHAPE_INSET_RECTANGLE = 5
+        CSSBasicShapeRectangleType = 1,
+        CSSBasicShapeCircleType = 2,
+        CSSBasicShapeEllipseType = 3,
+        CSSBasicShapePolygonType = 4,
+        CSSBasicShapeInsetRectangleType = 5
     };
 
     virtual Type type() const = 0;
@@ -82,7 +82,7 @@ public:
     void setRadiusX(PassRefPtr<CSSPrimitiveValue> radiusX) { m_radiusX = radiusX; }
     void setRadiusY(PassRefPtr<CSSPrimitiveValue> radiusY) { m_radiusY = radiusY; }
 
-    virtual Type type() const { return CSS_BASIC_SHAPE_RECTANGLE; }
+    virtual Type type() const { return CSSBasicShapeRectangleType; }
     virtual String cssText() const;
     virtual bool equals(const CSSBasicShape&) const;
 
@@ -120,7 +120,7 @@ public:
     void setRadiusX(PassRefPtr<CSSPrimitiveValue> radiusX) { m_radiusX = radiusX; }
     void setRadiusY(PassRefPtr<CSSPrimitiveValue> radiusY) { m_radiusY = radiusY; }
 
-    virtual Type type() const { return CSS_BASIC_SHAPE_INSET_RECTANGLE; }
+    virtual Type type() const { return CSSBasicShapeInsetRectangleType; }
     virtual String cssText() const;
     virtual bool equals(const CSSBasicShape&) const;
 
@@ -152,7 +152,7 @@ public:
     void setCenterY(PassRefPtr<CSSPrimitiveValue> centerY) { m_centerY = centerY; }
     void setRadius(PassRefPtr<CSSPrimitiveValue> radius) { m_radius = radius; }
 
-    virtual Type type() const { return CSS_BASIC_SHAPE_CIRCLE; }
+    virtual Type type() const { return CSSBasicShapeCircleType; }
     virtual String cssText() const;
     virtual bool equals(const CSSBasicShape&) const;
 
@@ -183,7 +183,7 @@ public:
     void setRadiusX(PassRefPtr<CSSPrimitiveValue> radiusX) { m_radiusX = radiusX; }
     void setRadiusY(PassRefPtr<CSSPrimitiveValue> radiusY) { m_radiusY = radiusY; }
 
-    virtual Type type() const { return CSS_BASIC_SHAPE_ELLIPSE; }
+    virtual Type type() const { return CSSBasicShapeEllipseType; }
     virtual String cssText() const;
     virtual bool equals(const CSSBasicShape&) const;
 
@@ -218,7 +218,7 @@ public:
     void setWindRule(WindRule w) { m_windRule = w; }
     WindRule windRule() const { return m_windRule; }
 
-    virtual Type type() const { return CSS_BASIC_SHAPE_POLYGON; }
+    virtual Type type() const { return CSSBasicShapePolygonType; }
     virtual String cssText() const;
     virtual bool equals(const CSSBasicShape&) const;
 #if ENABLE(CSS_VARIABLES)
