Source/WebCore/rendering/style/BasicShapes.h
@@ -46,11 +46,11 @@ public:
     virtual ~BasicShape() { }
 
     enum Type {
-        BASIC_SHAPE_RECTANGLE = 1,
-        BASIC_SHAPE_CIRCLE = 2,
-        BASIC_SHAPE_ELLIPSE = 3,
-        BASIC_SHAPE_POLYGON = 4,
-        BASIC_SHAPE_INSET_RECTANGLE = 5
+        BasicShapeRectangleType = 1,
+        BasicShapeCircleType = 2,
+        BasicShapeEllipseType = 3,
+        BasicShapePolygonType = 4,
+        BasicShapeInsetRectangleType = 5
     };
 
     bool canBlend(const BasicShape*) const;
@@ -85,7 +85,7 @@ public:
     virtual void path(Path&, const FloatRect&) OVERRIDE;
     virtual PassRefPtr<BasicShape> blend(const BasicShape*, double) const OVERRIDE;
 
-    virtual Type type() const { return BASIC_SHAPE_RECTANGLE; }
+    virtual Type type() const { return BasicShapeRectangleType; }
 private:
     BasicShapeRectangle()
         : m_cornerRadiusX(Undefined)
@@ -115,7 +115,7 @@ public:
     virtual void path(Path&, const FloatRect&) OVERRIDE;
     virtual PassRefPtr<BasicShape> blend(const BasicShape*, double) const OVERRIDE;
 
-    virtual Type type() const { return BASIC_SHAPE_CIRCLE; }
+    virtual Type type() const { return BasicShapeCircleType; }
 private:
     BasicShapeCircle() { }
 
@@ -141,7 +141,7 @@ public:
     virtual void path(Path&, const FloatRect&) OVERRIDE;
     virtual PassRefPtr<BasicShape> blend(const BasicShape*, double) const OVERRIDE;
 
-    virtual Type type() const { return BASIC_SHAPE_ELLIPSE; } 
+    virtual Type type() const { return BasicShapeEllipseType; } 
 private:
     BasicShapeEllipse() { }
 
@@ -167,7 +167,7 @@ public:
 
     virtual WindRule windRule() const { return m_windRule; }
 
-    virtual Type type() const { return BASIC_SHAPE_POLYGON; }
+    virtual Type type() const { return BasicShapePolygonType; }
 private:
     BasicShapePolygon()
         : m_windRule(RULE_NONZERO)
@@ -198,7 +198,7 @@ public:
     virtual void path(Path&, const FloatRect&) OVERRIDE;
     virtual PassRefPtr<BasicShape> blend(const BasicShape*, double) const OVERRIDE;
 
-    virtual Type type() const { return BASIC_SHAPE_INSET_RECTANGLE; }
+    virtual Type type() const { return BasicShapeInsetRectangleType; }
 private:
     BasicShapeInsetRectangle()
         : m_cornerRadiusX(Undefined)
